--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
     "axios": "^0.27.2",
+    "chart.js": "^3.8.0",
     "framer-motion": "^6.3.1",
     "react": "^18.0.0",
+    "react-chartjs-2": "^4.2.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
